--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,3 @@
-@import '../../node_modules/@po/style/css/po-theme-core.min.css';
+@import "../../node_modules/@po-ui/style/css/po-theme-core.min.css";
 
-@import './po-theme-custom.css';
+@import "./po-theme-custom.css";
